inserting into database.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,39 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="h-full w-full bg-zinc-800">
-      <h1 class="text-red-600">hello</h1>
+    <div class="p-4 h-full w-full bg-zinc-800">
+      <h1 class="text-3xl ml-2 mb-4 text-white">Create User</h1>
+      <form method="post" action="/create">
+        <input
+          class="p-2 bg-zinc-600 rounded-xl outline-none focus:outline-blue-500 m-2"
+          type="text"
+          placeholder="Name.."
+          name="name"
+        />
+        <input
+          class="p-2 bg-zinc-600 rounded-xl outline-none focus:outline-blue-500 m-2"
+          type="email"
+          placeholder="Email.."
+          name="email"
+        />
+        <input
+          class="p-2 bg-zinc-600 rounded-xl outline-none focus:outline-blue-500 m-2"
+          type="password"
+          placeholder="Password.."
+          name="password"
+        />
+        <input
+          class="p-2 bg-zinc-600 rounded-xl outline-none focus:outline-blue-500 m-2"
+          type="text"
+          placeholder="Age.."
+          name="age"
+        />
+        <input
+          class="block m-2 bg-blue-500 px-2 py-1 rounded-lg"
+          type="submit"
+          value="Submit"
+        />
+      </form>
     </div>
   </body>
 </html>
